# melt_loop

./: .gitignore  CMakeLists.txt  Makefile  addblanks.awk  aspect  box.prm  c_heating.cc  c_heating.h  cmake_install.cmake  composition_time_step.cc  composition_time_step.h  initial_composition.cc  initial_composition.h  initial_temperature.txt  initial_topo.txt  melt-1d-static.prm  melt_PTplot.prm  melt_global_loop.cc  melt_global_mod.h  melt_loop.prm  melt_loop_2D.prm  melt_petrol.cc  melt_petrol.h  orogen-2D.prm  thermal-melt-2d-column.prm  thermal-melt-2d-layers.prm  thermal-melt-migration-1d.prm  thermal-melt-migration-2d.prm  thermal-melt-migration-v0.prm  thermal-melt-migration.prm
plots/: T-phi-c.plt  _fig-batch.sh  addblank_gnuplot.sh  convert-p-comp.sh  grey-rainbow.json  grey-red-yellow-white.json  grey-white-pink.json  melt-1d.plt  melt-1d.sh  postproc-melt-FigM.py  water_melt_param.plt
tmp/: original-1mm-nice.prm
